--- a/src/custom.css
+++ b/src/custom.css
@@ -1,9 +1,3 @@
-/**
- * Any CSS included here will be global. The classic template
- * bundles Infima by default. Infima is a CSS framework designed to
- * work well for content-centric websites.
- */
-
 /* You can override the default Infima variables here. */
 :root {
   --ifm-color-primary: #2e8555;
@@ -27,4 +21,33 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+/* Header icon */
+.header-icon {
+  width: 24px;
+  height: 24px;
+  display: flex;
+  margin-right: 15px;
+}
+
+.header-icon:hover {
+  opacity: 0.6;
+}
+
+[data-theme='dark'] .header-icon {
+  filter: invert(1);
+}
+
+/* Icons */
+.icon-github {
+  background: url("https://simpleicons.org/icons/github.svg") no-repeat;
+}
+
+.icon-discord {
+  background: url("https://simpleicons.org/icons/discord.svg") no-repeat;
+}
+
+.icon-kofi {
+  background: url("https://simpleicons.org/icons/kofi.svg") no-repeat;
 }
