--- a/src/custom.css
+++ b/src/custom.css
@@ -51,3 +51,17 @@
 .icon-kofi {
   background: url("https://simpleicons.org/icons/kofi.svg") no-repeat;
 }
+
+.dropdown {
+  width: 100%;
+  background-color: #25262B;
+  border: none !important;
+}
+
+.dropdown > summary::before {
+  border-color: transparent transparent transparent #eee !important;
+}
+
+.dropdown > div > div {
+  border-top: 1px solid #eee !important;
+}
