feat: add tebex icon link

--- a/src/custom.css
+++ b/src/custom.css
@@ -52,6 +52,10 @@
   background: url("https://simpleicons.org/icons/kofi.svg") no-repeat;
 }
 
+.icon-tebex {
+  background: url("https://simpleicons.org/icons/telegraph.svg") no-repeat;
+}
+
 .dropdown {
   width: 100%;
   background-color: #25262B;
