feat(scoreboard): v2 docs

--- a/index.css
+++ b/index.css
@@ -8,3 +8,9 @@
   display: flex;
   margin-top: 0.5rem;
 }
+
+.ac-splitter {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  border-top-width: 3px;
+}
