feat: trick to force TS Type highlighting

--- a/index.css
+++ b/index.css
@@ -1,5 +1,10 @@
 @import 'tailwindcss';
 
+/* hide dummy lines used to force TypeScript Type highlighting */
+code.nextra-code span[data-highlighted-line-id="hideDummyLine"] {
+  display: none;
+}
+
 .ac-splitter {
   margin-top: 2rem;
   margin-bottom: 2rem;
